--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -31,15 +31,17 @@ html, body {
 }
 
 .page-section {
-
+	position: relative;
 }
 
 .main-navigation {
+	top: 0;
 	background-color: #898989;
 	text-align: center;
 	width: 100%;
 	padding-top: 5px;
 	padding-bottom: 5px;
+	z-index: 10;
 }
 
 .main-navigation a {
@@ -48,12 +50,9 @@ html, body {
 	font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
 	padding-left: 25px;
 	padding-right: 25px;
+	transition: 0.5s;
 }
 
 .active-navigation-button {
 	color: #FFFFFF;
-}
-
-#top-home-page {
-	background: #242424;
 }
