redid some css. added some basic text to the section divider. mostly just commiting to save at this point. nothing really special added. :)

--- a/styles/index-page-styles.css
+++ b/styles/index-page-styles.css
@@ -1,4 +1,23 @@
+.jumbotron p {
+	color: #FFA500;
+}
+
+.jumbotron span {
+	color: #FFFFFF;
+}
+
+.main-navigation {
+	background-color: #FFA500;
+}
+
+.main-navigation a {
+	color: #FFFFFF;
+}
+
 #top-home-page {
 	background-color: #242424;
 }
 
+.active-navigation-button {
+	color: #000000 !important;
+}
