--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -62,3 +62,8 @@ html, body {
 	transition: 0.5s;
 	text-decoration: none;
 }
+
+.enquiry-form input[type="text"], textarea {
+	width: calc( 100% - 50px );
+	margin: 10px;
+}
