--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -63,7 +63,45 @@ html, body {
 	text-decoration: none;
 }
 
+.enquiry-form {
+	margin: 15px;
+	background-color: #B0B0B0;
+	padding: 10px 5px 50px 5px;
+	max-width: 800px;
+}
+
+.enquiry-form label {
+	padding-left: 20px;
+}
+
 .enquiry-form input[type="text"], textarea {
-	width: calc( 100% - 50px );
+	width: calc( 100% - 25px );
 	margin: 10px;
+	font-size: 16px;
+}
+
+.enquiry-form input[type="submit"]:hover {
+	background-color: #FDB3CA;
+}
+
+.enquiry-form input[type="submit"] {
+	background-color: #19F687;
+	border: none;
+	font-size: 18px;
+	padding: 4px 10px 4px 10px;
+	margin: 10px;
+	border-radius: 5px;
+	transition: 0.5s;
+	display: block;
+	float: right;
+}
+
+.enquiry-form textarea {
+	resize: none;
+	height: 100px;
+}
+
+.enquiry-form .form-title {
+	width: 100%;
+	text-align: center;
 }
