Properly refactored css files. Made some sick transition effects, dude. B)

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -2,6 +2,7 @@
 	margin: 0;
 	padding: 0;
 	font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
+	transition: 0.5s;
 }
 
 html, body {
@@ -10,140 +11,6 @@ html, body {
 	min-height: 100%;
 }
 
-.jumbotron {
-	text-align: center;
-	width: 100%;
-	height: 100%;
-}
-
-.jumbotron p {
-	position: relative;
-	top: calc( 50% - 50px );
-	font-weight: 100;
-	font-size: 60px;
-	font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
-}
-
-.jumbotron span {
-	position: relative;
-	bottom: 50px;
-	font-size: 24px;
-}
-
-.main-navigation {
-	top: 0;
-	text-align: center;
-	width: 100%;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	z-index: 10;
-}
-
-.main-navigation a {
-	font-size: 24px;
-	font-weight: 100;
-	padding-left: 25px;
-	padding-right: 25px;
-	transition: 0.5s;
-	text-decoration: none;
-}
-
-.page-sections {
-	background-image: url('http://blackandorange-catering.nz/attachments/Image/Platten-Catering.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	position: relative;
-}
-
-.page-sections .page-section {
-	position: relative;
-	padding: 25px;
-	margin: auto;
-	width: 90%;
-	max-width: 1200px;
-	background-color: beige
-}
-
-.page-sections .page-section .section-title {
-	font-weight: 100;
-	font-size: 36px;
-	padding: 15px 0 15px 0;
-}
-
-.page-sections .page-section p {
-	font-weight: 100;
-	font-size: 20px;
-}
-
-.menu {
-	background-color: floralwhite;
-}
-
-.menu .menu-group {
-	margin: 15px;
-	display: inline-grid;
-	min-width: 300px;
-}
-
-.menu .menu-group .menu-group-title {
-	font-size: 28px;
-}
-
-.menu .menu-group .item-name {
-	font-size: 18px;
-}
-
-.menu .menu-group .item-name::before {
-	content: ' > ';
-}
-
-.menu .menu-group .item-name .item-money {
-	font-size: 12px;
-}
-
-.menu .menu-group .item-name .item-description {
-	font-size: 14px;
-}
-
-.enquiry-form {
-	margin: 15px;
-	background-color: #B0B0B0;
-	padding: 10px 5px 50px 5px;
-	max-width: 450px;
-}
-
-.enquiry-form label {
-	padding-left: 20px;
-}
-
-.enquiry-form input[type="text"], textarea {
-	width: calc( 100% - 25px );
-	margin: 10px;
-	font-size: 16px;
-}
-
-.enquiry-form input[type="submit"]:hover {
-	background-color: #FDB3CA;
-}
-
-.enquiry-form input[type="submit"] {
-	background-color: #19F687;
-	border: none;
-	font-size: 18px;
-	padding: 4px 10px 4px 10px;
-	margin: 10px;
-	border-radius: 5px;
-	transition: 0.5s;
-	display: block;
-	float: right;
-}
-
-.enquiry-form textarea {
-	resize: none;
-	height: 250px;
-}
-
-.enquiry-form .form-title {
-	width: 100%;
-	text-align: center;
+#top-home-page {
+	background-color: #242424;
 }
