--- a/styles/enquiry-styles.css
+++ b/styles/enquiry-styles.css
@@ -1,30 +1,30 @@
 .enquiry-form {
-	margin: 15px;
-	background-color: #B0B0B0;
+	background-color: #fff1d6;
 	padding: 10px 5px 50px 5px;
 	max-width: 450px;
 }
 
 .enquiry-form .form-title {
 	margin: 10px;
+	color: #7d4f45 !important;
 }
 
 .enquiry-form label {
 	padding-left: 20px;
+	color: #7d4f45;
 }
 
 .enquiry-form input[type="text"], textarea {
 	width: calc( 100% - 25px );
 	margin: 10px;
 	font-size: 16px;
-}
-
-.enquiry-form input[type="submit"]:hover {
-	background-color: #FDB3CA;
+	background-color: floralwhite;
+	border-style: none;
+	padding: 3px;
 }
 
 .enquiry-form input[type="submit"] {
-	background-color: #19F687;
+	background-color: #FFA500;
 	border: none;
 	font-size: 18px;
 	padding: 4px 10px 4px 10px;
@@ -33,9 +33,22 @@
 	float: right;
 }
 
+.enquiry-form input[type="submit"]:hover {
+	color: #ffffff;
+	padding-left: 13px;
+	margin-left: 7px;
+}
+
+.enquiry-form .enquiry-status {
+	margin: 10px;
+	float: right;
+	font-size: 15px !important;
+}
+
 .enquiry-form textarea {
 	resize: none;
 	height: 250px;
+	background-color: floralwhite;
 }
 
 .enquiry-form .form-title {
