Design continues. About section now asks for data from db.

--- a/styles/menu-styles.css
+++ b/styles/menu-styles.css
@@ -27,7 +27,7 @@
 
 .menu .menu-group .item-name:hover {
 	background-color: #ffe5c5;
-	margin: 0 0 0 10px;
+	margin-left: 10px; 
 }
 
 .menu .menu-group .item-name .item-money {
