--- a/styles/main-navigation-styles.css
+++ b/styles/main-navigation-styles.css
@@ -9,7 +9,7 @@
 }
 
 .main-navigation a {
-	font-size: 24px;
+	font-size: 24px !important;
 	font-weight: 100;
 	padding-left: 25px;
 	padding-right: 25px;
