--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -9,6 +9,10 @@ html, body {
 	margin: 0;
 	height: 100%;
 	min-height: 100%;
+	text-size-adjust: none;
+  	-webkit-text-size-adjust: none;
+  	-moz-text-size-adjust: none;
+  	-ms-text-size-adjust: none;
 }
 
 #top-home-page {
