--- a/styles/enquiry-styles.css
+++ b/styles/enquiry-styles.css
@@ -15,7 +15,7 @@
 	color: #7d4f45;
 }
 
-.enquiry-form input[type="text"], textarea {
+.enquiry-form input[type="text"], input[type="date"], textarea, select {
 	width: calc( 100% - 25px );
 	margin: 10px;
 	font-size: 16px !important;
@@ -48,7 +48,7 @@
 
 .enquiry-form textarea {
 	resize: none;
-	height: 250px;
+	height: 100px;
 	background-color: floralwhite;
 }
 
