--- a/styles/jumbotron-styles.css
+++ b/styles/jumbotron-styles.css
@@ -5,18 +5,8 @@
 	height: 100%;
 }
 
-.jumbotron p {
-	color: #FFA500;
+.jumbotron img {
+	width: 400px;
 	position: relative;
-	top: calc( 50% - 50px );
-	font-weight: 100;
-	font-size: 60px !important;
-	font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
-}
-
-.jumbotron span {
-	color: #FFFFFF;
-	position: relative;
-	bottom: 50px;
-	font-size: 24px !important;
+	top: calc(50% - 200px);
 }
